Fix image shape height and background items alignment (#1120)

--- a/src/components/svg-default-displayer/editor.scss
+++ b/src/components/svg-default-displayer/editor.scss
@@ -5,7 +5,7 @@
 
 	&__item {
 		cursor: pointer;
-		height: auto;
+		height: 40px;
 		padding: 0;
 		width: calc(16.6666666667% - 5px);
 		border: 2px solid #dddfe1;
